change gofundher to cashfundher
All match cases are implemented

--- a/.env.example
+++ b/.env.example
@@ -30,11 +30,11 @@ EMAIL_PASSWORD="chapter247@@"
 # Database configuration for development
 DB_USERNAME=root
 DB_PASSWORD=""
-DB_NAME=gofundher
+DB_NAME=cashfundher
 DB_HOST=127.0.0.1
 
 #Database configuration for production
 DB_USERNAME_PRODUCTION="root",
 DB_PASSWORD_PRODUCTION="",
-DB_NAME_PRODUCTION="gofundher",
+DB_NAME_PRODUCTION="cashfundher",
 DB_HOST_PRODUCTION="127.0.0.1", 
