change go/cofund to cashfund

--- a/.env.chapter247
+++ b/.env.chapter247
@@ -10,17 +10,17 @@ PAYPAL_API="https://api.paypal.com"
 
 # Email configuration
 EMAIL_SERVICE=gmail
-EMAIL_USER="Hello@cofundher.com"
+EMAIL_USER="Hello@cashfundher.com"
 EMAIL_PASSWORD="2Perfect2!"
 
 # Social Login Configurations
-FRONTEND_URL='https://cofundher.com'
+FRONTEND_URL='https://cashfundher.com'
 FB_CLIENT_ID='306939030545293'
 FB_CLIENT_SECRET='6fdaaad8a4333bfc1d729abd100c046c'
 LINKEDIN_CLIENT_ID="86c3wvl7hz9aq4"
 LINKEDIN_CLIENT_SECRET="helCrV2loZ3T37FG"
 GOOGLE_CLIENT_ID='1007483410643-f9qvc3uia0m1uigp8184nr34iafh7m09.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET='aE_7oSZ-Iy4EuL3kuLgANw3I'
-REFRESH_URL='https://cofundher.com/get-paid-now?regeneratelink=true'
-RETURN_URL ='https://cofundher.com/get-paid-now'
+REFRESH_URL='https://cashfundher.com/get-paid-now?regeneratelink=true'
+RETURN_URL ='https://cashfundher.com/get-paid-now'
 
